# projectile-motion-project

./: README.md  pyproject.toml
projectile_motion/: lsbu.py  projectile-2.py  projectile.py  projectile_2.py  test.py
