[tool.poetry]
name = "Projectile Motion"
version = "0.1.0"
description = "Project to plot the trajectory of a projectile fired on Earth and the Moon"
authors = ["ashfletch <ashley.fletcher@inmarsat.com>"]
license = "Apache2.0"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pylint = "^2.11.1"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
